# bigfiles

./: .gitignore  CMakeLists.txt  COPYING  COPYING.md  ConfigureChecks.cmake  DefineOptions.cmake  Makefile.am  README  README.md  Requirements.txt  autogen.sh  bigfiles.pc.in  bigobjects.pc.in  config.h.cmake  configure.ac  design-guide.md  libbigobjects-build-tree-settings.cmake.in  libbigobjects-config.cmake.in  libbigobjects.pc.cmake  libbigobjects.pc.cmake.in
adapters/: Makefile.am  gluster.c  gluster.h
adapters/glusterfs/src/: Makefile.am  gfapi.c  gfapi.h  options.h
bigfile/src/: Makefile.am  bigfile  exceptions.py  version.py
bosh/src/: Makefile.am  bosh  exceptions.py  utils.py
cmake/Modules/: DefineCompilerFlags.cmake  DefineInstallationPaths.cmake  Findgfapi.cmake  Findlibcurl.cmake
drivers/: CMakeLists.txt  Makefile.am  gluster.c  gluster.h  s3.c
drivers/s3/: CMakeLists.txt  s3-iobuf.c  s3-iobuf.h  s3-priv.c  s3-priv.h  s3.c  s3.h
include/: CMakeLists.txt  bigobjects-private.h  uri.h
include/bigobjects/: CMakeLists.txt  api.h  common.h  compat.h  driver.h  internal.h  uri.h
libbigfiles/src/: Makefile.am  adapter.c  adapter.h  bigfiles-private.c  bigfiles-private.h  bigfiles.c  bigfiles.h  common.h  driver.c  driver.h  uri-unused.c  uri.c  uri.h  utils.c  utils.h
libbigobjects/src/: CMakeLists.txt  Makefile.am  bigobjects.c  bigobjects.h  common.h  driver.c  driver.h
plugins/glusterfs/src/: gfapi.c
s3/: CMakeLists.txt  s3-iobuf.c  s3-iobuf.h  s3-priv.c  s3-priv.h  s3.c  s3.h
src/: CMakeLists.txt  api.c  bigobjects-private.c  compat.c  driver-defaults.c  driver.c  internal.c  uri-unused.c  uri.c
storage/glusterfs/src/: gfapi_wrapper.c
